welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var m:Int
      ^nearHundred:2: error: local variables must be initialized
  var m:Int
      ^nearHundred:4: error: type mismatch;
 found   : Int(100)
 required: Boolean
  return (10 < m < 100) || (m == 200)
                   ^