welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  var m:Int
  m = Math.abs(n)
  return (10 < m < 100) || (m == 200)
}